--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "node-cron": "^3.0.3"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "moment-timezone": "^0.5.47",
+    "node-cron": "^3.0.3",
+    "yahoo-finance2": "^2.13.3"
   }
 }
