--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "name": "stock-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
     "yahoo-finance2": "^2.13.3"
