--- a/stock-api/package.json
+++ b/stock-api/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "yahoo-finance2": "^2.13.3"
   }
 }
