--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stock-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js"
   },
@@ -10,11 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1",
     "yahoo-finance2": "^2.13.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
